# cpp-mission-control-protocol-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: mcps_client.cpp  mcps_server.cpp
docs/: PROTOCOL.md  SECURITY.md  TECHNICAL_DESIGN.md  TEST_PLAN.md
examples/: session.txt
include/mcps/: CommandProcessor.hpp  Config.hpp  Logger.hpp  MissionControlServer.hpp  Protocol.hpp  ServerState.hpp  StringUtil.hpp  UniqueFd.hpp
scripts/: demo.sh
src/: CommandProcessor.cpp  Logger.cpp  MissionControlServer.cpp  Protocol.cpp  ServerState.cpp  StringUtil.cpp
tests/: test_main.cpp
